tests/paczka1/fuzzy1/83239606.err
Error in line 2: 1dYO2cIkM S860 10,8
Error in line 7: 1dYO2cIkM A986 196,6
Error in line 5: 2Mo6vc A986 38,5
Error in line 15: bcya S860 10,7
Error in line 29: 2Mo6vc S860 62,9
Error in line 37: 2Mo6vc A285 92,5
Error in line 38: 2Mo6vc A986 57,5
